Added some more modal stuff

--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,9 @@ button.focus {
 .section.click {
   background-color: white;
 }
-
+.hide {
+  display: none;
+}
 /* button.hover {
   background-color: white;
 } */
